feat: complete v2 LLM gateway protocols