@@ -1,27 +1,27 @@
 package com.aseubel.yusi.service.ai.model;
 
+import com.aseubel.yusi.common.exception.BusinessException;
+import com.aseubel.yusi.common.exception.ErrorCode;
 import com.aseubel.yusi.config.ai.properties.ModelRoutingProperties;
 import com.aseubel.yusi.config.ai.properties.ModelTierDefinition;
 import com.aseubel.yusi.config.ai.properties.RoutePolicyDefinition;
-import com.aseubel.yusi.common.exception.BusinessException;
 import com.aseubel.yusi.pojo.entity.ModelConfigChangeLog;
 import com.aseubel.yusi.pojo.entity.ModelRuntimeConfig;
 import com.aseubel.yusi.repository.ModelConfigChangeLogRepository;
 import com.aseubel.yusi.repository.ModelRuntimeConfigRepository;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import org.redisson.api.RBucket;
-import org.redisson.api.RTopic;
-import org.redisson.api.RedissonClient;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 import org.mockito.InOrder;
+import org.redisson.api.RBucket;
+import org.redisson.api.RTopic;
+import org.redisson.api.RedissonClient;
 
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 
-import static com.aseubel.yusi.service.ai.model.ModelSelectionStrategyType.FAIL_OVER;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
@@ -36,28 +36,21 @@ import static org.mockito.Mockito.when;
 class ModelConfigCenterTest {
 
     @Test
-    void convertsLegacyGroupAndMatrixIntoTierAndRouteDefinitions() {
+    void rejectsNonCanonicalSchemaVersion() {
         ModelConfigCenter center = center();
-        ModelRoutingProperties legacy = legacyConfig();
+        ModelRoutingProperties config = validV2Config();
+        config.setSchemaVersion(1);
 
-        ModelRoutingProperties normalized = center.normalizeLegacyConfig(legacy);
-
-        assertThat(normalized.getSchemaVersion()).isEqualTo(2);
-        assertThat(normalized.getTiers()).containsKey("chat-zh");
-        assertThat(normalized.getTiers().get("chat-zh").getMembers()).containsExactly("qwen");
-        assertThat(normalized.getRoutes()).singleElement().satisfies(route -> {
-            assertThat(route.getId()).isEqualTo("zh-chat");
-            assertThat(route.getLanguage()).isEqualTo("zh");
-            assertThat(route.getScene()).isEqualTo("chat");
-            assertThat(route.getPrimaryTier()).isEqualTo("chat-zh");
-        });
+        assertThatThrownBy(() -> center.validateForAdmin(config))
+                .isInstanceOf(BusinessException.class)
+                .hasMessageContaining("schema-version: 2");
     }
 
     @Test
     void rejectsRouteReferencingUnknownTier() {
         ModelConfigCenter center = center();
         ModelRoutingProperties config = validV2Config();
-        config.getRoutes().get(0).setPrimaryTier("missing");
+        config.getRoutes().getFirst().setPrimaryTier("missing");
 
         assertThatThrownBy(() -> center.validateForAdmin(config))
                 .isInstanceOf(BusinessException.class)
@@ -81,10 +74,10 @@ class ModelConfigCenterTest {
         current.setVersion(7L);
         ModelConfigCenter center = new ModelConfigCenter(current, null, new ObjectMapper(), null);
 
-        assertThatThrownBy(() -> center.updateFromAdmin(validV2Config(), 6L, "admin-1"))
+        assertThatThrownBy(() -> center.updateCanonical(validV2Config(), 6L, "admin-1"))
                 .isInstanceOf(BusinessException.class)
                 .satisfies(error -> assertThat(((BusinessException) error).getErrorCode())
-                        .isEqualTo(com.aseubel.yusi.common.exception.ErrorCode.CONFIG_VERSION_CONFLICT));
+                        .isEqualTo(ErrorCode.CONFIG_VERSION_CONFLICT));
     }
 
     @Test
@@ -103,10 +96,10 @@ class ModelConfigCenterTest {
         ModelConfigCenter center = new ModelConfigCenter(bootstrap, null, new ObjectMapper(), null,
                 runtimeRepository, null);
 
-        assertThatThrownBy(() -> center.updateFromAdmin(validV2Config(), 7L, "admin-1"))
+        assertThatThrownBy(() -> center.updateCanonical(validV2Config(), 7L, "admin-1"))
                 .isInstanceOf(BusinessException.class)
                 .satisfies(error -> assertThat(((BusinessException) error).getErrorCode())
-                        .isEqualTo(com.aseubel.yusi.common.exception.ErrorCode.CONFIG_VERSION_CONFLICT));
+                        .isEqualTo(ErrorCode.CONFIG_VERSION_CONFLICT));
     }
 
     @Test
@@ -129,7 +122,7 @@ class ModelConfigCenterTest {
         ModelConfigCenter center = new ModelConfigCenter(current, redissonClient, new ObjectMapper(), null,
                 runtimeRepository, changeLogRepository);
 
-        assertThatThrownBy(() -> center.updateFromAdmin(center.getConfigForDisplay(), 7L, "admin-1"))
+        assertThatThrownBy(() -> center.updateCanonical(validV2Config(), 7L, "admin-1"))
                 .isInstanceOf(ModelConfigCenter.ModelRuntimePublishException.class);
 
         assertThat(center.getCurrentVersion()).isEqualTo(7L);
@@ -137,7 +130,7 @@ class ModelConfigCenterTest {
         verify(changeLogRepository, times(2)).save(logs.capture());
         assertThat(logs.getAllValues()).extracting(ModelConfigChangeLog::getSuccess)
                 .containsExactly(true, false);
-        assertThat(logs.getAllValues().get(0).getAfterJson()).doesNotContain("secret");
+        assertThat(logs.getAllValues().getFirst().getAfterJson()).doesNotContain("secret");
         InOrder order = inOrder(runtimeRepository, changeLogRepository, bucket, topic);
         order.verify(runtimeRepository).save(any(ModelRuntimeConfig.class));
         order.verify(changeLogRepository).save(any(ModelConfigChangeLog.class));
@@ -149,24 +142,15 @@ class ModelConfigCenterTest {
         return new ModelConfigCenter(new ModelRoutingProperties(), null, new ObjectMapper(), null);
     }
 
-    private ModelRoutingProperties legacyConfig() {
-        ModelRoutingProperties config = new ModelRoutingProperties();
-        config.setModels(List.of(model("qwen")));
-        config.setGroups(new LinkedHashMap<>(Map.of("chat-zh", group(List.of("qwen")))));
-        config.setMatrix(new LinkedHashMap<>(Map.of(
-                "zh", new LinkedHashMap<>(Map.of("chat", scene("chat-zh"))))));
-        return config;
-    }
-
     private ModelRoutingProperties validV2Config() {
         ModelRoutingProperties config = new ModelRoutingProperties();
+        config.setSchemaVersion(2);
         config.setModels(List.of(model("qwen")));
 
-        ModelRoutingProperties.GroupDefinition tier = group(List.of("qwen"));
-        ModelTierDefinition tierDefinition = new ModelTierDefinition();
-        tierDefinition.setMembers(tier.getMembers());
-        tierDefinition.setStrategy(tier.getStrategy());
-        config.setTiers(new LinkedHashMap<>(Map.of("balanced", tierDefinition)));
+        ModelTierDefinition tier = new ModelTierDefinition();
+        tier.setMembers(List.of("qwen"));
+        tier.setStrategy(ModelSelectionStrategyType.FAIL_OVER);
+        config.setTiers(new LinkedHashMap<>(Map.of("balanced", tier)));
 
         RoutePolicyDefinition route = new RoutePolicyDefinition();
         route.setId("chat-zh");
@@ -181,23 +165,12 @@ class ModelConfigCenterTest {
     private ModelRoutingProperties.ModelDefinition model(String id) {
         ModelRoutingProperties.ModelDefinition model = new ModelRoutingProperties.ModelDefinition();
         model.setId(id);
+        model.setProvider("openai-compatible");
+        model.setProtocol(ModelProtocol.CHAT_COMPLETIONS);
         model.setModel("model-name");
         model.setApikey("secret");
         model.setCapabilities(List.of(ModelCapability.CHAT, ModelCapability.STREAMING_CHAT));
         model.setEnabled(true);
         return model;
-    }
-
-    private ModelRoutingProperties.GroupDefinition group(List<String> members) {
-        ModelRoutingProperties.GroupDefinition group = new ModelRoutingProperties.GroupDefinition();
-        group.setMembers(members);
-        group.setStrategy(FAIL_OVER);
-        return group;
-    }
-
-    private ModelRoutingProperties.SceneDefinition scene(String group) {
-        ModelRoutingProperties.SceneDefinition scene = new ModelRoutingProperties.SceneDefinition();
-        scene.setGroup(group);
-        return scene;
     }
 }
